--- a/bitrix/templates/main/0.html
+++ b/bitrix/templates/main/0.html
@@ -20,12 +20,13 @@
     <div class="svg-defs-container" style="display: none;"><svg xmlns="http://www.w3.org/2000/svg"><symbol id="arrow" viewBox="0 0 40 20"><path fill="#FFF" d="M20 18.272L1.578-.15A.917.917 0 1 0 .28 1.147L19.283 20.15c.197.197.46.285.717.266.257.02.52-.07.717-.266L39.72 1.147A.917.917 0 0 0 38.422-.15L20 18.272z" fill-rule="evenodd"/></symbol></svg></div>
     <!--BEGIN out-->
     <div class="root">
-      <div class="wrapper footer">
+      <div class="wrapper page-header">
         <div class="page__bg">
-          <div class="page__bg-inner" style="background-image: url(img/bgfooter.png);"></div>
+          <div class="page__bg-inner" style="background-image: url(img/bgheader.jpg);"></div>
         </div>
         <div class="box">
-          <div class="content"><a class="header" href="/">
+          <div class="content">
+            <div class="header">
               <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewbox="0 0 119.4 38.7">
                 <defs>
                   <path id="a" d="M26.2 2l-3.9 3.9V2h-.7v5.3h.1l3.8-3.9v3.9h.7V2zm3.4 0l-2.4 5.3h.8l1.8-3.8 1.8 3.8h.7L29.8 2h-.2zm4.3 2.7h.6c.5 0 .8 0 1 .1.2.1.3.2.4.4.1.2.1.4.1.5 0 .6-.5 1-1.4 1h-.8v-2zM33.2 2v5.3H35c.6 0 1.1-.2 1.4-.5.3-.3.5-.7.5-1.1 0-.4-.1-.7-.3-1-.2-.3-.5-.5-.8-.5-.3-.1-.7-.1-1.2-.1H34V2h-.8zm7 1.1l1.5 3.6h-3l1.5-3.6zM40 2l-2 4.7h-.6V8h.6v-.7h4.4V8h.6V6.7h-.6l-2-4.7H40zm8.5 0l-3.9 3.9V2h-.7v5.3h.1l3.8-3.9v3.9h.7V2zM51 4.3c-.1 0-.3-.1-.4-.3-.1-.1-.2-.3-.2-.5s0-.4.1-.5c.1-.1.2-.2.4-.3.2-.1.4-.1.9-.1h.5v1.7h-.5c-.4.1-.7.1-.8 0m.3-2.3c-.5 0-.8.1-1.1.4-.3.3-.4.6-.4 1.1 0 .4.1.7.4.9.2.3.6.4 1 .5l-1.6 2.4h.7L51.8 5h.5v2.4h.7V2h-1.7zm26.2 0l-2.1 4.1L73.2 2H73l-1.8 5.3h.8l1.3-3.9 2 3.9h.1l2-3.9 1.3 3.9h.7L77.7 2h-.2zm11.4 0l-2.4 5.3h.7L89 3.5l1.8 3.8h.7L89 2h-.1zm4.2 2.7h.6c.5 0 .8 0 1 .1.2.1.3.2.4.4.1.2.2.4.2.5 0 .6-.5 1-1.4 1h-.8v-2zM92.4 2v5.3h1.8c.6 0 1.1-.2 1.4-.5.3-.3.4-.6.4-1.1 0-.4-.1-.7-.3-1-.2-.3-.5-.5-.8-.5-.3-.1-.7-.1-1.2-.1h-.6V2h-.7zM66.7 6.5c-.3-.2-.6-.4-.8-.8-.2-.3-.3-.7-.3-1.1 0-.6.2-1.1.6-1.5.4-.4.9-.6 1.5-.6s1 .2 1.4.6c.4.4.6.9.6 1.5 0 .4-.1.7-.3 1.1-.2.3-.4.6-.7.8-.3.2-.7.3-1 .3-.3 0-.7-.1-1-.3m-1-3.7c-.5.5-.7 1.2-.7 1.9s.3 1.4.8 1.9 1.2.8 2 .8 1.5-.3 2-.8.8-1.2.8-1.9-.2-1.4-.7-1.9c-.5-.6-1.2-.9-2-.9-1 0-1.6.3-2.2.9m15.9.2c.4-.3.8-.4 1.4-.4.3 0 .6.1.9.2.3.1.5.3.7.5.2.2.3.5.4.9h-4c.1-.5.3-.9.6-1.2m-.7-.1c-.4.5-.6 1.1-.6 1.8s.2 1.3.7 1.9 1.2.8 2 .8c.4 0 .7-.1 1-.2.3-.1.6-.3.8-.5.2-.2.5-.5.7-.9l-.6-.3c-.2.3-.4.6-.6.7-.2.2-.4.3-.6.4-.3.1-.5.1-.8.1-.6 0-1-.2-1.4-.6-.4-.4-.6-.9-.6-1.5h4.8c0-.7-.2-1.3-.6-1.8-.5-.7-1.3-1-2.2-1-.8.1-1.5.4-2 1.1m17.3.1c.4-.3.8-.5 1.3-.5.3 0 .6.1.9.2.3.1.5.3.7.5.2.2.3.5.4.9h-4c.3-.4.5-.8.7-1.1m-.7-.1c-.4.5-.6 1.1-.6 1.8s.2 1.3.7 1.9c.5.6 1.2.8 2 .8.4 0 .7-.1 1-.2.3-.1.6-.3.8-.5.2-.2.5-.5.7-.9l-.6-.3c-.2.3-.4.6-.6.7-.2.2-.4.3-.7.4-.3.1-.5.1-.8.1-.6 0-1-.2-1.4-.6-.4-.4-.6-.9-.6-1.5h4.8c0-.7-.2-1.3-.6-1.8-.5-.7-1.3-1-2.2-1-.7.1-1.4.4-1.9 1.1M17.1.2v7.1h.7V.9h2.9V.2h-3.6zM60.8 0c-1.1 0-2 .4-2.8 1.1-.7.7-1 1.6-1 2.6s.3 1.8.9 2.5c.7.8 1.7 1.2 3 1.2.7 0 1.2-.1 1.8-.4.5-.2 1-.6 1.3-1.1l-.6-.4c-.7.8-1.5 1.2-2.5 1.2-.9 0-1.7-.3-2.3-.9-.6-.6-.9-1.3-.9-2.2 0-.6.1-1.1.4-1.6.3-.5.6-.8 1.1-1.1.5-.3 1-.4 1.6-.4.5 0 1 .1 1.4.3.4.2.8.5 1.1.9l.6-.4c-.3-.5-.8-.8-1.3-1.1-.5-.1-1.1-.2-1.8-.2z"></path>
@@ -60,35 +61,136 @@
                 <path fill="#AFAFAF" fill-rule="evenodd" d="M66.8 29.8c-.7.4-1.3.7-2 1-.7.3-1.4.6-2.1.8-.7.2-1.4.4-2.1.5-.7.1-1.4.1-2.2 0-.7 0-1.4-.2-2-.4-.6-.2-1.2-.6-1.8-1-.5-.4-1-1-1.3-1.6-.2-.3-.3-.6-.5-1-.1-.3-.2-.7-.3-1 0 .4 0 .7.1 1.1.1.4.2.7.3 1.1.1.3.3.7.5 1 .2.3.5.6.7.9.3.3.6.5.9.7.3.2.7.4 1 .5.7.3 1.5.5 2.2.5.4 0 .8.1 1.2 0h.6c.2 0 .4 0 .6-.1.2 0 .4-.1.6-.1.1 0 .2 0 .3-.1.1 0 .2 0 .3-.1.2-.1.4-.1.6-.2.2-.1.4-.1.5-.2.4-.1.7-.3 1-.5.3-.2.7-.4 1-.6l.9-.6c.1-.1.2-.1.2-.2.1-.1.2-.1.2-.2.4 0 .5-.1.6-.2" clip-path="url(#h)" clip-rule="evenodd"></path>
                 <path fill="#EDCF6E" fill-rule="evenodd" d="M59.7 31.4h-.5c-.2 0-.3-.1-.5-.1-.3-.1-.7-.2-1-.3-.3-.1-.6-.3-.9-.4-.3-.2-.6-.4-.8-.6-.2-.2-.5-.4-.6-.7-.1-.1-.2-.3-.3-.4 0-.1-.1-.1-.1-.2s-.1-.1-.1-.2l-.3-.9c0-.2-.1-.3-.1-.5v-1.4c0-.2 0-.3.1-.5 0-.2.1-.3.1-.5 0-.1 0-.2.1-.2 0-.1.1-.1.1-.2.1-.1.1-.3.2-.4.2-.3.4-.5.6-.8.1-.1.2-.2.4-.3.1-.1.3-.2.4-.3.3-.2.6-.4.9-.5.3-.2.6-.3.9-.4.2-.1.3-.1.5-.2.1 0 .2 0 .3-.1h.2-1.1c-.4 0-.7.1-1.1.2-.4.1-.7.3-1 .4-.2.1-.3.2-.5.3-.2.1-.3.2-.5.3l-.4.4-.2.2c-.1.1-.1.2-.2.2-.1.2-.2.3-.3.5 0 .1-.1.2-.1.3 0 .1-.1.2-.1.3-.1.2-.1.4-.2.6 0 .2-.1.4-.1.6 0 .2 0 .4-.1.6v1.1c0 .2.1.4.1.6.1.4.2.7.4 1.1 0 .1.1.2.1.3 0 .1.1.2.2.3.1.2.2.3.4.5.3.3.5.6.9.8.2.1.3.2.5.3.2.1.3.2.5.2.4.1.7.2 1.1.3.4.1.7.1 1.1.1h.9c0-.4.1-.4.1-.4" clip-path="url(#h)" clip-rule="evenodd"></path>
                 <path fill="#D7D7D7" fill-rule="evenodd" d="M0 26.2h45.9v.4H0zm73.5 0h45.9v.4H73.5z" clip-path="url(#h)" clip-rule="evenodd"></path>
-              </svg></a>
-            <div class="features-wrap">
-              <div class="features-item anim-cont"><img src="img/card.png" alt=""></div>
-              <div class="features-item textblock anim-cont">
-                <div class="text">Карта является накопительной. В зависимости от суммы накоплений держатели карт могут получить следующие скидки:</div>
-                <div class="feat-item">
-                  <div class="feat-item-persent">2%</div>
-                  <div class="text">От 20 руб.</div>
-                </div>
-                <div class="feat-item">
-                  <div class="feat-item-persent">5%</div>
-                  <div class="text">От 250 руб.</div>
-                </div>
-                <div class="feat-item">
-                  <div class="feat-item-persent">7%</div>
-                  <div class="text">От 1000 руб.</div>
-                </div>
-              </div>
-              <div class="features-item textblock anim-cont">
-                <div class="text">ДНИ РОЖДЕНИЯ: В период 10 дней до и 10 дней после дня рождения, все держатели карт «Клуб Сомелье» получают скидку <span>10 %</span></div>
-                <div class="text sm">Скидкой можно воспользоваться только в указанный период и только один раз. Данная скидка не суммируется с текущей скидкой по карте. Необходимым условием получения скидки являются корректно заполненные анкетные данные.</div>
-              </div>
-              <div class="features-item textblock anim-cont">
-                <div class="text">СВАДЬБЫ: В период 10 дней до и 10 дней после регистрации брака, все держатели карт «Клуб Сомелье» получают скидку <span>12 % </span></div>
-                <div class="text sm">Скидкой можно воспользоваться только в указанный период и только один раз. Обязательным условием является наличие копии заявления о регистрации брака, либо копии свидетельства о регистрации брака  на фамилию держателя карты. Данная скидка не суммируется с текущей скидкой по карте.</div>
-              </div>
-              <div class="features-item w100p"><a class="btn" href="/"><span>Заполнить анкетные данные</span></a></div>
+              </svg>
             </div>
-            <hr class="hr">
+            <form class="js-validate form anim-cont" action="/_scripts/send_mail.php">
+              <div class="title">Хотите клубную карту?</div>
+              <div class="text">Заполните анкетные данные и мы вам перезвоним</div>
+			  <div class="input-item">
+                <div class="input-wrapper">
+                  <input class="input-main" id="cardNumber" type="text" name="card" data-validation="length" data-validation-length="min6" data-validation-error-msg="Поле заполнено неправильно" data-validation-has-keyup-event="true">
+                  <label class="input-label" for="#cardNumber">Номер карты</label>
+                  <div class="input-line">
+                    <div class="input-line-inner"></div>
+                  </div>
+                </div>
+              </div>
+              <div class="input-item">
+                <div class="input-wrapper">
+                  <input class="input-main" id="nameInp" type="text" name="name" data-validation="length" data-validation-length="min10" autocomplete="off" data-validation-error-msg="Введите ФИО без сокращений" placeholder="Иванов Иван Иванович">
+                  <label class="input-label" for="#nameInp">ФИО</label>
+                  <div class="input-line">
+                    <div class="input-line-inner"></div>
+                  </div>
+                </div>
+              </div>
+              <div class="input-item">
+                <div class="input-wrapper">
+                  <input class="input-main" id="birth" type="tel" name="birth" data-validation="custom" data-validation-regexp="^[-0-9()/+ ]+$" data-validation-error-msg="Поле заполнено неправильно" placeholder="ДД/ММ/ГГГГ">
+                  <label class="input-label" for="#birth">Дата рождения</label>
+                  <div class="input-line">
+                    <div class="input-line-inner"></div>
+                  </div>
+                </div>
+              </div>
+              <div class="input-item">
+                <div class="input-wrapper">
+                  <input class="input-main" id="mailInp" type="email" name="email" data-validation="email required" data-validation-error-msg="Поле заполнено неправильно">
+                  <label class="input-label" for="#mailInp">Email </label>
+                  <div class="input-line">
+                    <div class="input-line-inner"></div>
+                  </div>
+                </div>
+              </div>
+              <div class="input-item">
+                <div class="input-wrapper">
+                  <input class="input-main" id="telInp" type="tel" name="tel" data-validation="custom" data-validation-regexp="^[-0-9()+ ]+$" data-validation-error-msg="Поле заполнено неправильно">
+                  <label class="input-label" for="#telInp">Телефон  </label>
+                  <div class="input-line">
+                    <div class="input-line-inner"></div>
+                  </div>
+                </div>
+              </div>
+              <div class="input-item">
+                <div class="input-wrapper">
+                  <div class="select-u-item">
+                    <label class="input_label"><span class="input_main">
+                        <input class="input-real" type="checkbox" name="rules" value="y" checked="checked"><span class="input-checked"></span></span><span class="input-text">Получать информацию о мероприятиях и акциях Клуба Сомелье</span></label>
+                  </div>
+                </div>
+              </div>
+              <div class="form-succes">
+                <div class="form-succes-inner">
+                  <div class="text">Cпасибо за вашу заявку, мы свяжемся с вами в ближейшее время</div>
+                </div>
+              </div>
+              <button class="btn" type="submit"><span>Отправить заявку</span></button>
+            </form>
+          </div>
+        </div>
+        <div class="page-head-arrd">
+          <svg class="icon icon-drop">
+            <use xlink:href="#arrow" xmlns:xlink="http://www.w3.org/1999/xlink"></use>
+          </svg>
+        </div>
+      </div>
+      <div class="wrapper about">
+        <div class="page__bg">
+          <div class="page__bg-inner" style="background-image: url(/img/logot.png);"></div>
+        </div>
+        <div class="box">
+          <div class="content">
+            <div class="about-content anim-cont">
+              <div class="title">Гильдия Сомелье это:</div>
+              <div class="text">Сообщество, объединяющее любителей вина и других алкогольных напитков. На данный момент «Гильдия Сомелье» сотрудничает с сетью магазинов «ВИНО». Мы постоянно работаем над привлечением новых партнеров к программе гильдии.</div>
+              <div class="slider-container anim-cont">
+                <div class="slider-wrap">
+                  <div class="slider-inner js-slider">
+                    <div class="slider-element">
+                      <div class="slider-element-inner" style="background-image: url(&quot;img/1.jpg&quot;);"></div>
+                    </div>
+                    <div class="slider-element">
+                      <div class="slider-element-inner" style="background-image: url(&quot;img/2.jpg&quot;);">
+                        <!-- iframe(width='560', height='315', src='https://www.youtube.com/embed/UgsS3nhRRzQ', frameborder='0', allowfullscreen='')-->
+                      </div>
+                    </div>
+                    <div class="slider-element">
+                      <div class="slider-element-inner" style="background-image: url(&quot;img/3.jpg&quot;); ;"></div>
+                    </div>
+                  </div>
+                </div>
+                <div class="slider-counter">
+                  <div class="carousel-status"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="wrapper footer">
+        <div class="page__bg">
+          <div class="page__bg-inner" style="background-image: url(img/bgfooter.png);"></div>
+        </div>
+        <div class="box">
+          <div class="content">
+            <div class="footer-content anim-cont">
+              <div class="title lines"><span>Наши цели</span></div>
+              <div class="text">Данное общество было создано во имя развития культуры пития; Мы стараемся предоставить членам нашего клуба максимум возможностей для развития и образования в алкогольной культуре; Мы любим и уважаем алкоголь, нашей целью является вызвать уважение к нему у каждого.</div>
+              <div class="block-border anim-cont">
+                <div class="title lines"><span>Вступив в гильдию Сомелье вы получаете:</span></div>
+                <div class="list-wrap">
+                  <ul>
+                    <li>Профессиональное общение с сомелье и любителями вина;</li>
+                    <li>Возможность участия в закрытых дегустациях;</li>
+                    <li>Возможность участия в мастер-классах;</li>
+                  </ul>
+                  <ul>
+                    <li>Особые условия покупки алкоголя в магазинах наших партнеров;</li>
+                    <li>Материал для самообразования по алкогольной тематике.</li>
+                  </ul>
+                </div><a class="btn" href="/card.html"><span>Подробнее о достоинствах карты</span></a>
+              </div>
+            </div>
             <div class="footer-footer-content anim-cont">
               <div class="title">У вас остались вопросы?</div>
               <div class="text">Вы всегда можете задать их по электронной почте:</div><a href="mailto:info@gildia-sommelier.com">info@gildia-sommelier.com</a>
